# resend-rust

./: .gitignore  Cargo.toml  README.md
src/: api_keys.rs  batch.rs  domains.rs  emails.rs  http.rs  lib.rs  utils.rs
tests/: api_keys.rs  batch.rs  domains.rs  emails.rs
