[package]
name = "resend-rust"
version = "0.1.1"
edition = "2021"
description = "A Resend client implemented in Rust"
license = "MIT"

[features]
default = ["reqwest"]
reqwest = []

[dependencies]
dotenvy = "0.15.7"
hashbrown = { version = "0.14.3", features = ["serde"] }
reqwest = "0.11.23"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
anyhow = "1.0.79"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
